testsuite/tests/dependent/should_fail/all.T
# test('Roles5', normal, compile_fail, [''])

